--- a/BreaksPPU/PPUPlayer/Properties/Resources.resx
+++ b/BreaksPPU/PPUPlayer/Properties/Resources.resx
@@ -130,6 +130,9 @@
   <data name="button_stop" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\button_stop.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="not_implemented" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\not_implemented.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="ppu_player_logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\ppu_player_logo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
