--- a/BreaksPPU/PPUPlayer/FormMain.resx
+++ b/BreaksPPU/PPUPlayer/FormMain.resx
@@ -84,4 +84,7 @@
   <metadata name="saveFileDialogVCD.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>291, 56</value>
   </metadata>
+  <metadata name="openFileDialogPPUDump.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>444, 41</value>
+  </metadata>
 </root>
