--- a/BreaksPPU/PPUPlayer/FormMain.resx
+++ b/BreaksPPU/PPUPlayer/FormMain.resx
@@ -90,4 +90,7 @@
   <metadata name="openFileDialogHEX.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>637, 55</value>
   </metadata>
+  <metadata name="saveFileDialogImage.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>793, 55</value>
+  </metadata>
 </root>
